--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="General Construction" />
     <meta property="og:description" content="General Construction - Premium Residential Complexes" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://generalconstruction.uz/opengraph-image.png" />
+    <meta property="og:image" content="https://generalconstruction.com/opengraph-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@GeneralConstruction" />
-    <meta name="twitter:image" content="https://generalconstruction.uz/opengraph-image.png" />
+    <meta name="twitter:image" content="https://generalconstruction.com/opengraph-image.png" />
   </head>
 
   <body>
